[package]
name = "rgit"
version = "0.1.0"
edition = "2021"

[dependencies]
getset = "0.1.2"
chrono = "0.4.19"
camino = "1.0.7"
sha-1 = "0.10.0"
flate2 = "1.0.22"
hex = "0.4.3"
pathdiff = { version = "0.2.1", features = ["camino"] }
clap = { version = "3.0.14", features = ["derive"] }
walkdir = "2.3.2"
path-clean = "0.1.0"
tempfile = "3.3.0"

[dev-dependencies]
serial_test = "0.5.1"
lipsum = "0.8.0"
assert_cmd = "2.0.4"
